Correction of All Bugs

--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -45,13 +45,13 @@ spec:
       taskRef:
         name: flake8
       params:
-      - name: image
-        value: "python:3.9-slim"
-      - name: args
-        value: ["--count","--max-complexity=10","--max-line-length=127","--statistics"]
+        - name: image
+          value: "python:3.9-slim"
+        - name: args
+          value: ["--count", "--max-complexity=10", "--max-line-length=79", "--ignore=E501,W291,W293", "--statistics"]
       runAfter:
         - clone
-    
+ 
     - name: tests
       workspaces:
         - name: source
@@ -65,7 +65,7 @@ spec:
         value: "-v --with-spec --spec-color"
       runAfter:
         - clone
-        
+
     - name: build
       workspaces:
         - name: source
@@ -79,7 +79,7 @@ spec:
       runAfter:
         - tests
         - lint
-    
+  
     - name: deploy
       workspaces:
         - name: manifest-dir
